--- a/TheatricalPlayersRefactoringKata/TheatricalPlayersRefactoringKata.csproj
+++ b/TheatricalPlayersRefactoringKata/TheatricalPlayersRefactoringKata.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DbContext\" />
+    <Folder Include="Controller\" />
+  </ItemGroup>
+
 </Project>
